feat(toolbar): add duplicate form button

--- a/projects/editor/src/lib/components/form/form.component.html
+++ b/projects/editor/src/lib/components/form/form.component.html
@@ -33,6 +33,7 @@
         [(selectedDisplay)]="selectedFormDisplay"
         [isEditMode]="isEditMode$ | async"
         (isEditModeChange)="onEditModeChanged($event)"
+        (duplicateForm)="onDuplicateForm()"
         (resetModel)="onResetModel()"
         (toggleSidebars)="showSidebars = $event">
     </editor-toolbar>
