chore(edit-field); move to edit-field module

--- a/projects/editor/src/lib/edit-field/edit-field.component.html
+++ b/projects/editor/src/lib/edit-field/edit-field.component.html
@@ -15,6 +15,7 @@
         <div class="styling-wrapper">
             <editor-edit-field-styles
                 [editField]="field"
+                [parentField]="parentField"
                 (fieldChanged)="fieldChanged.emit()">
             </editor-edit-field-styles>
         </div>
