--- a/projects/editor/src/lib/form/form.component.html
+++ b/projects/editor/src/lib/form/form.component.html
@@ -67,6 +67,7 @@
         <editor-edit-field
             mainContent
             [field]="activeFieldTarget"
+            [parentField]="activeFieldParent"
             [property]="activeFieldProperty"
             [isSimplified]="!isAdvanced"
             [resizeTabHeader$]="resizeEnd$"
