chore(style-service): move to styles component

--- a/projects/editor/src/lib/edit-field/edit-field.component.html
+++ b/projects/editor/src/lib/edit-field/edit-field.component.html
@@ -13,11 +13,11 @@
     </mat-tab>
     <mat-tab label="Styling">
         <div class="styling-wrapper">
-            <editor-edit-field-styles
+            <editor-styles
                 [editField]="field"
                 [parentField]="parentField"
                 (fieldChanged)="fieldChanged.emit()">
-            </editor-edit-field-styles>
+            </editor-styles>
         </div>
     </mat-tab>
 </mat-tab-group>
