--- a/projects/editor/src/lib/home/home.component.html
+++ b/projects/editor/src/lib/home/home.component.html
@@ -6,11 +6,13 @@
         <button mat-button (click)="onExportForm()" [disabled]="forms.length === 0"><mat-icon>file_upload</mat-icon>Export Form</button>
     </span>
 </span>
-<mat-tab-group *ngIf="forms.length > 0; else emptyView" [selectedIndex]="tabIndex" (selectedIndexChange)="onTabChange($event)">
+<mat-tab-group class="form-tab-group" *ngIf="forms.length > 0; else emptyView" [selectedIndex]="tabIndex" (selectedIndexChange)="onTabChange($event)">
     <mat-tab *ngFor="let form of forms; let i = index; trackBy: trackFormById">
         <ng-template mat-tab-label>
-            {{ form.name }}
-            <button class="close-btn" mat-icon-button (click)="onRemoveForm(i)"><mat-icon>close</mat-icon></button>
+            <div class="inner-tab-label-content" (mousedown)="onTabLabelMouseDown($event, i)">
+                <span>{{ form.name }}</span>
+                <button class="close-btn" mat-icon-button (click)="onRemoveForm(i)"><mat-icon>close</mat-icon></button>
+            </div>
         </ng-template>
         <editor-form [form]="form"></editor-form>
     </mat-tab>
