refactor(editorField): move all editor properties into one object

--- a/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
+++ b/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
@@ -9,7 +9,7 @@
         *ngIf="!hideOptions"
     >
         <button
-            *ngIf="field.canHaveChildren"
+            *ngIf="fieldInfo.canHaveChildren"
             mat-icon-button
             [matMenuTriggerFor]="addCategoryMenu"
             (click)="$event.stopPropagation()"
@@ -18,7 +18,7 @@
         </button>
 
         <button
-            *ngIf="field.parentFieldId"
+            *ngIf="fieldInfo.parentFieldId"
             mat-icon-button
             (click)="onRemove(); $event.stopPropagation()"
         >
