--- a/projects/editor/src/lib/custom-formly/formly-group/formly-group.component.html
+++ b/projects/editor/src/lib/custom-formly/formly-group/formly-group.component.html
@@ -1,5 +1,5 @@
 <div
-    [id]="field.fieldId"
+    [id]="field._info.fieldId"
     [class]="dropListClasses"
     [class.edit-mode]="isEditMode"
     cdkDropList
