--- a/projects/editor/src/lib/edit-field/styles/styles.component.html
+++ b/projects/editor/src/lib/edit-field/styles/styles.component.html
@@ -60,7 +60,7 @@
     </ng-template>
 </section>
 
-<section *ngIf="editField.canHaveChildren">
+<section *ngIf="editField._info.canHaveChildren">
     <h4 class="title">Style Children</h4>
 
     <editor-container-option
