--- a/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
+++ b/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
@@ -9,24 +9,15 @@
         *ngIf="!hideOptions"
     >
         <button
-            *ngIf="fieldInfo.canHaveChildren"
+            [disabled]="isLastChild"
             mat-icon-button
-            [matMenuTriggerFor]="addCategoryMenu"
-            (click)="$event.stopPropagation()"
+            (click)="onMoveDown()"
         >
-            <mat-icon>add</mat-icon>
+            <mat-icon>arrow_downward</mat-icon>
         </button>
 
         <button
-            *ngIf="fieldInfo.parentFieldId"
-            mat-icon-button
-            (click)="onRemove(); $event.stopPropagation()"
-        >
-            <mat-icon>remove</mat-icon>
-        </button>
-
-        <button
-            *ngIf="!isFirstChild"
+            [disabled]="isFirstChild"
             mat-icon-button
             (click)="onMoveUp()"
         >
@@ -34,16 +25,45 @@
         </button>
 
         <button
-            *ngIf="!isLastChild"
             mat-icon-button
-            (click)="onMoveDown()"
+            [matMenuTriggerFor]="optionsMenu"
+            (click)="$event.stopPropagation()"
         >
-            <mat-icon>arrow_downward</mat-icon>
+            <mat-icon>more_vert</mat-icon>
         </button>
     </div>
 </header>
 
 <ng-template #container></ng-template>
+
+<mat-menu #optionsMenu="matMenu">
+    <button
+        *ngIf="fieldInfo.canHaveChildren"
+        mat-menu-item
+        [matMenuTriggerFor]="addCategoryMenu"
+    >
+        <mat-icon>add</mat-icon>
+        <span>Add</span>
+    </button>
+
+    <button
+        *ngIf="fieldInfo.canHaveChildren && replaceCategories.length > 0"
+        mat-menu-item
+        [matMenuTriggerFor]="replaceCategoryMenu"
+    >
+        <mat-icon>sync</mat-icon>
+        <span>Replace</span>
+    </button>
+
+    <button
+        *ngIf="fieldInfo.parentFieldId"
+        mat-menu-item
+        (click)="onRemove()"
+    >
+        <mat-icon>remove</mat-icon>
+        <span>Remove</span>
+    </button>
+</mat-menu>
 
 <mat-menu #addCategoryMenu="matMenu">
     <ng-container *ngFor="let category of editorService.fieldCategories">
@@ -59,6 +79,27 @@
                 mat-menu-item
                 *ngFor="let option of category.typeOptions"
                 (click)="onAddChildField(option.name, option.customName)"
+            >
+                {{ option.displayName }}
+            </button>
+        </mat-menu>
+    </ng-container>
+</mat-menu>
+
+<mat-menu #replaceCategoryMenu="matMenu">
+    <ng-container *ngFor="let category of replaceCategories">
+        <button
+            mat-menu-item
+            [matMenuTriggerFor]="replaceFieldMenu"
+        >
+            {{ category.name }}
+        </button>
+
+        <mat-menu #replaceFieldMenu="matMenu">
+            <button
+                mat-menu-item
+                *ngFor="let option of category.typeOptions"
+                (click)="onReplaceParentField(option.name, option.customName)"
             >
                 {{ option.displayName }}
             </button>
