--- a/projects/editor/src/lib/tree-item/tree-item.component.scss
+++ b/projects/editor/src/lib/tree-item/tree-item.component.scss
@@ -1,12 +1,12 @@
-:host {
-	display: flex;
-    min-height: var(--tree-item-header-height);
+.header {
+    display: flex;
+    min-height: var(--tree-item-height);
     position: relative;
-	column-gap: 4px;
-	align-items: center;
+    column-gap: 4px;
+    align-items: center;
     padding: 4px;
     white-space: nowrap;
-	border-radius: 4px;
+    border-radius: 4px;
 
     &:hover {
         background-color: rgba(0, 0, 0, 0.06);
@@ -35,11 +35,12 @@
     right: 4px;
     background-color: white;
     border-radius: 50%;
-    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14),
+        0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
 .tree-item-side-line {
     position: absolute;
     height: 100%;
-    border-left: 1px solid rgba(0,0,0,0.12);
+    border-left: 1px solid rgba(0, 0, 0, 0.12);
 }
