--- a/projects/editor/src/lib/property/input-property/input-property.component.html
+++ b/projects/editor/src/lib/property/input-property/input-property.component.html
@@ -1,30 +1,32 @@
-<editor-tree-item-header
+<editor-tree-item
     *ngIf="!isSimplified; else simplifiedView"
     [treeLevel]="treeLevel"
     [hasOptions]="hasOptions"
     [optionsMenu]="optionsMenu"
 >
-    <span class="property-key">
-        <span
-            #key
-            class="keyField"
-            [ngClass]="{ editable: !!property.isKeyEditable }"
-            [contentEditable]="!!property.isKeyEditable"
-        >
+    <ng-container headerContent>
+        <span class="property-key">
+            <span
+                #key
+                class="keyField"
+                [ngClass]="{ editable: !!property.isKeyEditable }"
+                [contentEditable]="!!property.isKeyEditable"
+            >
+            </span>
+            <span>:</span>
         </span>
-        <span>:</span>
-    </span>
-    <mat-form-field
-        class="property-field"
-        appearance="outline"
-    >
-        <input
-            matInput
-            [formControl]="formControl"
-            [type]="property.type | lowercase"
-        />
-    </mat-form-field>
-</editor-tree-item-header>
+        <mat-form-field
+            class="property-field"
+            appearance="outline"
+        >
+            <input
+                matInput
+                [formControl]="formControl"
+                [type]="property.type | lowercase"
+            />
+        </mat-form-field>
+    </ng-container>
+</editor-tree-item>
 
 <ng-template #simplifiedView>
     <mat-form-field class="simplified">
