--- a/projects/editor/src/lib/property/textarea-property/textarea-property.component.html
+++ b/projects/editor/src/lib/property/textarea-property/textarea-property.component.html
@@ -1,33 +1,35 @@
-<editor-tree-item-header
+<editor-tree-item
     *ngIf="!isSimplified; else simplifiedView"
     [treeLevel]="treeLevel"
     [hasOptions]="hasOptions"
     [optionsMenu]="optionsMenu"
 >
-    <span class="property-key">
-        <span
-            #key
-            class="keyField"
-            [ngClass]="{ editable: !!property.isKeyEditable }"
-            [contentEditable]="!!property.isKeyEditable"
-        >
+    <ng-container headerContent>
+        <span class="property-key">
+            <span
+                #key
+                class="keyField"
+                [ngClass]="{ editable: !!property.isKeyEditable }"
+                [contentEditable]="!!property.isKeyEditable"
+            >
+            </span>
+            <span>:</span>
         </span>
-        <span>:</span>
-    </span>
-    <mat-form-field
-        class="property-field"
-        appearance="outline"
-    >
-        <textarea
-            matInput
-            cdkTextareaAutosize
-            [cdkAutosizeMaxRows]="property.maxRows"
-            [cdkAutosizeMinRows]="property.minRows"
-            [formControl]="formControl"
+        <mat-form-field
+            class="property-field"
+            appearance="outline"
         >
-        </textarea>
-    </mat-form-field>
-</editor-tree-item-header>
+            <textarea
+                matInput
+                cdkTextareaAutosize
+                [cdkAutosizeMaxRows]="property.maxRows"
+                [cdkAutosizeMinRows]="property.minRows"
+                [formControl]="formControl"
+            >
+            </textarea>
+        </mat-form-field>
+    </ng-container>
+</editor-tree-item>
 
 <ng-template #simplifiedView>
     <mat-form-field>
