--- a/projects/editor/src/lib/property/object-array-properties/array-property.component.html
+++ b/projects/editor/src/lib/property/object-array-properties/array-property.component.html
@@ -18,7 +18,7 @@
             [contentEditable]="!!property.isKeyEditable"
         >
         </span>
-        <span>{{ '[ ' + childrenTarget.length + ' ]' }}</span>
+        <span>{{ '[ ' + childProperties.length + ' ]' }}</span>
     </span>
 
     <ng-container childrenContent>
@@ -42,7 +42,7 @@
                     >chevron_right</mat-icon
                 >
             </button>
-            <span>{{ property.name ? property.name : property.key + ' [ ' + childrenTarget.length + ' ]' }}</span>
+            <span>{{ property.name ? property.name : property.key + ' [ ' + childProperties.length + ' ]' }}</span>
         </span>
 
         <button
@@ -74,45 +74,49 @@
         <ng-container [ngSwitch]="child.type">
             <editor-object-property
                 *ngSwitchCase="typeofProperty.OBJECT"
-                [treeLevel]="treeLevel + 1"
-                [target]="childrenTarget"
+                [treeLevel]="childrenTreeLevel"
+                [path]="getChildPath(child.key)"
+                [target]="target"
                 [property]="propertyService.getAsObjectProperty(child)"
                 [isSimplified]="isSimplified"
                 (remove)="onRemoveChild(i)"
-                (targetChanged)="targetChanged.emit()"
+                (targetChanged)="targetChanged.emit($event)"
             >
             </editor-object-property>
 
             <editor-boolean-property
                 *ngSwitchCase="typeofProperty.BOOLEAN"
-                [treeLevel]="treeLevel + 1"
+                [treeLevel]="childrenTreeLevel"
+                [path]="getChildPath(child.key)"
                 [property]="child"
-                [target]="childrenTarget"
+                [target]="target"
                 [isSimplified]="isSimplified"
                 (remove)="onRemoveChild(i)"
-                (targetChanged)="targetChanged.emit()"
+                (targetChanged)="targetChanged.emit($event)"
             >
             </editor-boolean-property>
 
             <editor-chip-list-property
                 *ngSwitchCase="typeofProperty.CHIP_LIST"
-                [treeLevel]="treeLevel + 1"
+                [treeLevel]="childrenTreeLevel"
+                [path]="getChildPath(child.key)"
                 [property]="propertyService.getAsChiplistProperty(child)"
-                [target]="childrenTarget"
+                [target]="target"
                 [isSimplified]="isSimplified"
                 (remove)="onRemoveChild(i)"
-                (targetChanged)="targetChanged.emit()"
+                (targetChanged)="targetChanged.emit($event)"
             >
             </editor-chip-list-property>
 
             <editor-textarea-property
                 *ngSwitchCase="typeofProperty.TEXTAREA"
-                [treeLevel]="treeLevel + 1"
+                [treeLevel]="childrenTreeLevel"
+                [path]="getChildPath(child.key)"
                 [property]="propertyService.getAsTextareaProperty(child)"
-                [target]="childrenTarget"
+                [target]="target"
                 [isSimplified]="isSimplified"
                 (remove)="onRemoveChild(i)"
-                (targetChanged)="targetChanged.emit()"
+                (targetChanged)="targetChanged.emit($event)"
             >
             </editor-textarea-property>
 
@@ -124,12 +128,13 @@
             </ng-container>
             <ng-template #inputProperty>
                 <editor-input-property
-                    [treeLevel]="treeLevel + 1"
+                    [treeLevel]="childrenTreeLevel"
+                    [path]="getChildPath(child.key)"
                     [property]="propertyService.getAsInputProperty(child)"
-                    [target]="childrenTarget"
+                    [target]="target"
                     [isSimplified]="isSimplified"
                     (remove)="onRemoveChild(i)"
-                    (targetChanged)="targetChanged.emit()"
+                    (targetChanged)="targetChanged.emit($event)"
                 >
                 </editor-input-property>
             </ng-template>
